--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
       <title>Super Mario!</title>
-        <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
+        <link rel='stylesheet' type='text/css' href='styles.css'/>
   </head>
   <body>
-        <img src="http://i1061.photobucket.com/albums/t480/ericqweinstein/mario.jpg"/>
+        <img id="mario" src="http://i1061.photobucket.com/albums/t480/ericqweinstein/mario.jpg"/>
+        <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script type='text/javascript' src='app.js'></script>
   </body>
 </html>
